--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/algil/vidly#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "joi": "^14.3.0"
+    "joi": "^14.3.0",
+    "mongoose": "^5.3.15"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
