--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "joi": "^14.3.0",
+    "joi-objectid": "^2.0.0",
     "mongoose": "^5.3.15"
   },
   "devDependencies": {
