--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.15"
   },
   "devDependencies": {
