--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/algil/vidly#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
