--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/algil/vidly#readme",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "config": "^3.0.0",
     "express": "^4.16.4",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
