--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.2",
     "config": "^3.0.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.4.0",
