--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.3.15"
+    "mongoose": "^5.3.15",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
