--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.js",
+    "test": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.7",
+    "supertest": "^3.3.0"
   }
 }
