--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --watchAll --verbose --runInBand",
+    "test:coverage": "jest --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
